--- a/unit_03/activity2/menu.css
+++ b/unit_03/activity2/menu.css
@@ -17,8 +17,10 @@ nav ul {
 }
 
 body {
-    background-color: #FFE45E;
+    background: rgb(255,228,94);
+    background: linear-gradient(90deg, rgba(255,228,94,1) 35%, rgba(255,99,146,1) 100%);
     color: #220901;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .main {
